--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,63 @@
 @charset "UTF-8";
 
-root {
+:root {
     --cor1: #49a09d;
     --cor2: #5f2c82;
+}
+
+* {
+
+    margin: 0px;
+    padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+    font-size: 1em;
+}
+
+body, html {
+
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--cor2);
+}
+
+main {   
+
+    position: relative;   
+    height: 100vh;
+    width: 100vw;
+    border: 1px solid black;
+    border-radius: 6px;
+    
+    
+}
+
+section#login {
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+}
+
+section#login > div#imagem {
+
+    display: block;
+    background: var(--cor2) url(../imagens/building.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 225px;
+    
+}
+
+section#login > div#formulario {
+
+    display: block;
+    padding: 10px;
 }
