--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -2,9 +2,48 @@
 
 @media screen and (min-width: 768px) and (max-width:992px) {
 
-    body {
-        background-image: linear-gradient
-        background-repeat: no-repeat;
+    section#login {
+        width: 90vw;
     }
 
+    section#login > div#imagem {
+        float: left;
+        width: 30%;
+        height: 100%;
+        background-size: ccover;
+    }
+
+    section#login > div#formulario {
+        float: right;
+        width: 70%;
+        height: 100%;
+    }
+
+    body, html {
+
+        background-image: linear-gradient(to top, var(--cor1) , var(--cor2)60%);
+    }
+
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+
+    section#login {
+        width: 90vw;
+    }
+
+    section#login > div#imagem {
+
+        float: right;
+        width:30%;
+        height: 100%;
+
+    }
+
+    section#login > div#formulario {
+
+        float: left;
+        width: 70%;
+        height: 100%;
+    }
 }
