--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -3,14 +3,14 @@
 @media screen and (min-width: 768px) and (max-width:992px) {
 
     section#login {
-        width: 90vw;
+        width: 80vw;
     }
 
     section#login > div#imagem {
         float: left;
         width: 30%;
         height: 100%;
-        background-size: ccover;
+        background-size: cover;
     }
 
     section#login > div#formulario {
@@ -26,24 +26,25 @@
 
 }
 
-@media screen and (min-width: 992px) and (max-width: 1200px) {
+@media screen and (min-width: 992px) {
 
     section#login {
-        width: 90vw;
+        width: 950px;
     }
 
     section#login > div#imagem {
 
-        float: right;
-        width:30%;
+        float: left;
+        width:50%;
         height: 100%;
 
     }
 
     section#login > div#formulario {
 
-        float: left;
-        width: 70%;
+        float: right;
+        width: 50%;
         height: 100%;
     }
 }
+
