--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,6 +44,9 @@ section#login {
     width: 250px;
     height: 500px;
     border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+    transition: height .3s, width .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
