--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -24,9 +24,16 @@
         background-image: linear-gradient(to top, var(--cor1) , var(--cor2)60%);
     }
 
+   
+
 }
 
 @media screen and (min-width: 992px) {
+
+    body {
+
+        background-image: linear-gradient(to top, var(--cor1) , var(--cor2)60%);
+    }
 
     section#login {
         width: 950px;
@@ -34,7 +41,7 @@
 
     section#login > div#imagem {
 
-        float: left;
+        float: right;
         width:50%;
         height: 100%;
 
@@ -42,14 +49,23 @@
 
     section#login > div#formulario {
 
-        float: right;
+        float: left;
         width: 50%;
         height: 100%;
     }
 
-    body {
+    div#formulario > h1 {
 
-        background-image: linear-gradient(to top, var(--cor1) , var(--cor2)60%);
+        font-size: 2em;
+    }
+
+    
+
+    div#formulario > p {
+
+        font-size: 1.2em;;
+    
+    
     }
 }
 
