--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,10 +39,9 @@ section#login {
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
-
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 520px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
     transition: height .3s, width .3s;
@@ -77,3 +76,68 @@ div#formulario > p {
 
 
 }
+
+form > div.campo {
+
+    background-color: var(--cor2);
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+
+}
+
+div.campo > label {
+
+    display: none;
+}
+
+form > input[type="submit"] {
+
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #2d6462;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+
+}
+
+form > input[type="submit"]:hover {
+
+    background-color: #2d6462;
+
+}
+
+form > a.botao {
+
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border-radius: 5px;
+    border: 1px solid #49a09d;  
+    text-decoration: none;
+
+}
+
+form > a.botao:hover {
+
+    background-color: #6cd3cf;
+}
+
+form > a.botao > span {
+
+    font-size: 0.8em;
+}
+
