--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -4,12 +4,14 @@
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
         float: left;
         width: 30%;
         height: 100%;
+        
         background-size: cover;
     }
 
@@ -37,6 +39,7 @@
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -63,7 +66,8 @@
 
     div#formulario > p {
 
-        font-size: 1.2em;;
+        font-size: 1.0em;
+        margin: 20px 0px;
     
     
     }
