--- a/estilos/style.css
+++ b/estilos/style.css
@@ -80,10 +80,11 @@ div#formulario > p {
 form > div.campo {
 
     background-color: var(--cor2);
+    border: 2px solid var(--cor2);
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 
 }
@@ -91,6 +92,34 @@ form > div.campo {
 div.campo > label {
 
     display: none;
+}
+
+div.campo > span {
+
+    color: white;
+    /*background-color: black;*/
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+
+}
+
+div.campo > input {
+
+    background-color: #94cfcd;
+    font-size: 1em;
+    height: 100%;
+    width: calc(100% - 44px);
+    transform: translateY(-13px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px; 
+}
+
+div.campo > input:focus-within {
+
+    background-color: white;
+    border: none;
 }
 
 form > input[type="submit"] {
