--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -45,8 +45,9 @@
     section#login > div#imagem {
 
         float: right;
-        width:50%;
+        width: 50%;
         height: 100%;
+        background-size: cover;
 
     }
 
